code-facts: Java extraction runs javac as the build configures it
The project model carries each source set's compiler settings: Maven's compiler
plugin (with annotationProcessorPaths resolved by Maven's RepositorySystem) and
Gradle's compile task options. Before ids are claimed, a -proc:only pass writes
into the build's generated-sources directory; what it wrote is extracted,
is_generated, and analysis runs the processors again with a throwaway output
directory (Lombok rewrites trees there). Processing runs when the build's javac
would. Maven's other generated-sources directories are read as the last build
left them; a build that generates and left nothing says so. Encoding and
compiler arguments are the build's. Tests: a processor the tests build, run by
Maven and by Gradle; a Latin-1 source; plugin output on disk.
Why: code-analysis/decisions.md 2026-09-15 (night ii).

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01UKitBMB264Kkt7CfzpJ4sM